--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--mail API-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
