--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #application name:
 spring.application.name=rsbusinesstech-backend
 
+#profile:
+spring.profiles.active = prod
+
 #configuration for SMPT:
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -9,3 +12,4 @@ spring.mail.username=rsbusinesstech@gmail.com
 spring.mail.password=pndj fkdq iqrd lfdt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
