fixing the scheduler code, modifying application.properties for DB connectivity

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,6 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #JPA/Hibernate settings(Optional)
-spring.jpa.hibernate.ddl-auto=update
+#it is set to "validate because we should create all the tables/schemas etc manually on production in order to avoid the data loss if used as "update".
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
