--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Rohit2605@@@@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #JPA/Hibernate settings(Optional)
-##it will create the tables automatically mentioned using @Entity.
+##it will create/update the tables automatically mentioned using @Entity.it is used for local development/testing purpose only.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
