Commenting Db related code

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
-#db-configuration(PostgreSQL):
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-#JPA/Hibernate settings(Optional)
-#it is set to "validate because we should create all the tables/schemas etc manually on production in order to avoid the data loss if used as "update".
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+##db-configuration(PostgreSQL):
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+##JPA/Hibernate settings(Optional)
+##it is set to "validate because we should create all the tables/schemas etc manually on production in order to avoid the data loss if used as "update".
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.show-sql=true
