--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=rsbusinesstech-backend
 
 #profile:
-spring.profiles.active = prod
+spring.profiles.active = dev
 
 #configuration for SMPT:
 spring.mail.host=smtp.gmail.com
