--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,10 @@
 		</dependency>
 
 		<!--db-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
 		<!--MySQL-->
 <!--		<dependency>-->
 <!--	     	<groupId>mysql</groupId>-->
@@ -61,11 +61,11 @@
 <!--		    <version>5.1.48</version>-->
 <!--		</dependency>-->
 		<!--PostgreSQL-->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.2</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.postgresql</groupId>-->
+<!--			<artifactId>postgresql</artifactId>-->
+<!--			<version>42.7.2</version>-->
+<!--		</dependency>-->
 
 		<!--starter:it is a dependency required to start a springboot application, it contains a set of required dependencies like spring-core,beans,boot etc.-->
 		<dependency>
