--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
-#db-configuration(MySQL):
-spring.datasource.url=jdbc:mysql://localhost:3306/rsbusinesstech?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Rohit2605@@@@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-#JPA/Hibernate settings(Optional)
-##it will create/update the tables automatically mentioned using @Entity.it is used for local development/testing purpose only.
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+##db-configuration(MySQL):
+#spring.datasource.url=jdbc:mysql://localhost:3306/rsbusinesstech?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Rohit2605@@@@
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#
+##JPA/Hibernate settings(Optional)
+###it will create/update the tables automatically mentioned using @Entity.it is used for local development/testing purpose only.
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
