Changing configuration for Mail API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ spring.application.name=rsbusinesstech-backend
 #profile:
 spring.profiles.active = dev
 
-#configuration for SMPT:
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=rsbusinesstech@gmail.com
-# using app password because 2FA is enabled for this gmail, so cann't use the actual password.
-spring.mail.password=pndj fkdq iqrd lfdt
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+##configuration for SMPT:
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=rsbusinesstech@gmail.com
+## using app password because 2FA is enabled for this gmail, so cann't use the actual password.
+#spring.mail.password=pndj fkdq iqrd lfdt
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 
