--- a/src/main/resources/data/newprojects.json
+++ b/src/main/resources/data/newprojects.json
@@ -1,96 +1,1 @@
-[
-  {
-    "id": 1,
-    "name": "Axis Crown @ Axis Pandan",
-    "price": 500000.0,
-    "address": "(Pandan Indah, Ampang)",
-    "bedrooms": 2,
-    "bathrooms": 2,
-    "carParks": 1,
-    "furnishing": "Fully Furnished",
-    "sizeSqft": 750.0,
-    "imageUrls": [
-      "assets/images/commercial-hero.webp",
-      "assets/images/kl.webp",
-      "assets/images/kl-rent-bg.webp",
-      "assets/images/commercial-hero.webp",
-      "assets/images/buy-hero.webp",
-      "assets/images/kl-rent-bg.webp"
-    ],
-    "imagePublicIds": [],
-    "amenities": [
-      "Private bathroom",
-      "Family room",
-      "Flat screen TV",
-      "Balcony",
-      "Air conditioning",
-      "Kitchen",
-      "Washing machine",
-      "Pets allowed",
-      "Kitchen",
-      "Dining table",
-      "Microwave oven",
-      "Sofa",
-      "High-speed WiFi",
-      "24-hour security"
-    ],
-    "commonFacilities": [
-      "Gym",
-      "Outdoor swimming pool",
-      "Sauna",
-      "Terrace",
-      "Park",
-      "Water slide",
-      "24-hour security"
-    ],
-    "location": "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15930.970407806825!2d101.68405868809338!3d3.1390036499999967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc37d111111111%3A0x7a0b1d362bc3a0!2sKuala%20Lumpur%2C%20Federal%20Territory%20of%20Kuala%20Lumpur%2C%20Malaysia!5e0!3m2!1sen!2smy!4v1661430783654!5m2!1sen!2smy",
-    "videoURL": "https://www.youtube.com/embed/xeYoAEYx"
-  },
-  {
-    "id": 2,
-    "name": "Axis Crown @ Axis Pandan",
-    "price": 800000.0,
-    "address": "(Pandan Indah, Ampang)",
-    "bedrooms": 4,
-    "bathrooms": 2,
-    "carParks": 3,
-    "furnishing": "Fully Furnished",
-    "sizeSqft": 750.0,
-    "imageUrls": [
-      "assets/images/commercial-hero.webp",
-      "assets/images/kl.webp",
-      "assets/images/kl-rent-bg.webp",
-      "assets/images/commercial-hero.webp",
-      "assets/images/buy-hero.webp",
-      "assets/images/kl-rent-bg.webp"
-    ],
-    "imagePublicIds": [],
-    "amenities": [
-      "Private bathroom",
-      "Family room",
-      "Flat screen TV",
-      "Balcony",
-      "Air conditioning",
-      "Kitchen",
-      "Washing machine",
-      "Pets allowed",
-      "Kitchen",
-      "Dining table",
-      "Microwave oven",
-      "Sofa",
-      "High-speed WiFi",
-      "24-hour security"
-    ],
-    "commonFacilities": [
-      "Gym",
-      "Outdoor swimming pool",
-      "Sauna",
-      "Terrace",
-      "Park",
-      "Water slide",
-      "24-hour security"
-    ],
-    "location": "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15930.970407806825!2d101.68405868809338!3d3.1390036499999967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc37d111111111%3A0x7a0b1d362bc3a0!2sKuala%20Lumpur%2C%20Federal%20Territory%20of%20Kuala%20Lumpur%2C%20Malaysia!5e0!3m2!1sen!2smy!4v1661430783654!5m2!1sen!2smy",
-    "videoURL": "https://www.youtube.com/embed/xeYoAEYx"
-  }
-]
+[{"0":"Property ID","1":"Name","2":"Price","3":"Address","4":"Bedrooms","5":"Bathrooms","6":"Car Parks","7":"Furnishing","8":"Size (sq.ft.)","9":"Amenities","10":"Common Facilities","11":"Images","12":"Location","13":"Video","14":"Actions"},{"0":"7","1":"Palm Elite Residence, Cheras","2":"0","3":"Jalan Palma Utama, 43200 Cheras, Selangor","4":"4","5":"2","6":"2","7":"Fully Furnished","8":"1276","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d151227.3387587198!2d101.67769238151412!3d3.085262065417551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d3.1411148!2d101.74099509999999!4m5!1s0x31cdcd000fbce43f%3A0x5d4e3f69bc7f266f!2sPalma%20Elit%2C%20Jalan%20Palma%20Utama%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0247352999999997!2d101.81218199999999!5e1!3m2!1sen!2smy!4v1764952131781!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"},{"0":"6","1":"Palm Elite Residence, Cheras","2":"0","3":"Jalan Palma Utama, 43200 Cheras, Selangor","4":"4","5":"2","6":"2","7":"Fully Furnished","8":"1016","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d151227.3387587198!2d101.67769238151412!3d3.085262065417551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d3.1411148!2d101.74099509999999!4m5!1s0x31cdcd000fbce43f%3A0x5d4e3f69bc7f266f!2sPalma%20Elit%2C%20Jalan%20Palma%20Utama%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0247352999999997!2d101.81218199999999!5e1!3m2!1sen!2smy!4v1764952131781!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"},{"0":"5","1":"Sungai Long Residence, Cheras","2":"0","3":"Jalan Sungai Long, Bandar Sungai Long, 43000 Kajang, Selangor","4":"4","5":"2","6":"2","7":"Fully Furnished","8":"1276","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18902.770190563926!2d101.74099514999999!3d3.1214416999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc335a2868e5e5%3A0xabc416a3c3486d85!2sJalan%20Sungai%20Long%2C%20Bandar%20Sungai%20Long%2C%2043000%20Kajang%2C%20Selangor!3m2!1d3.0440402!2d101.8037846!5e1!3m2!1sen!2smy!4v1764951655978!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"},{"0":"4","1":"Sungai Long Residence, Cheras","2":"0","3":"Jalan Sungai Long, Bandar Sungai Long, 43000 Kajang, Selangor","4":"4","5":"2","6":"2","7":"Fully Furnished","8":"1016","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18902.770190563926!2d101.74099514999999!3d3.1214416999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc335a2868e5e5%3A0xabc416a3c3486d85!2sJalan%20Sungai%20Long%2C%20Bandar%20Sungai%20Long%2C%2043000%20Kajang%2C%20Selangor!3m2!1d3.0440402!2d101.8037846!5e1!3m2!1sen!2smy!4v1764951655978!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"},{"0":"3","1":"The Maxxon, Cheras","2":"0","3":"Persiaran Damai Perdana, Bandar Damai Perdana, 43200 Cheras, Selangor","4":"5","5":"3","6":"","7":"Fully Furnished","8":"1500","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d12428.70105649954!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc35000a92fef9%3A0x8c2d6f981f466147!2sPersiaran%20Damai%20Perdana%2C%20Bandar%20Damai%20Perdana%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0413527!2d101.7358926!5e1!3m2!1sen!2smy!4v1764951149462!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"},{"0":"2","1":"The Maxxon, Cheras","2":"0","3":"Persiaran Damai Perdana, Bandar Damai Perdana, 43200 Cheras, Selangor","4":"4","5":"2","6":"","7":"Fully Furnished","8":"1150","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d12428.70105649954!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc35000a92fef9%3A0x8c2d6f981f466147!2sPersiaran%20Damai%20Perdana%2C%20Bandar%20Damai%20Perdana%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0413527!2d101.7358926!5e1!3m2!1sen!2smy!4v1764951149462!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"},{"0":"1","1":"The Maxxon, Cheras","2":"0","3":"Persiaran Damai Perdana, Bandar Damai Perdana, 43200 Cheras, Selangor","4":"3","5":"2","6":"0","7":"Fully Furnished","8":"1000","9":"Private bathroom, Family room, Flat screen TV, Balcony, Air conditioning, Kitchen, Washing machine, Pets allowed, Dining table, Microwave oven, Sofa, High-speed WiFi, 24-hour security\t","10":"Gym, Outdoor swimming pool, Sauna, Terrace, Park, Water slide, 24-hour security\t","11":"","12":"https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d12428.70105649954!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc35000a92fef9%3A0x8c2d6f981f466147!2sPersiaran%20Damai%20Perdana%2C%20Bandar%20Damai%20Perdana%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0413527!2d101.7358926!5e1!3m2!1sen!2smy!4v1764951149462!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade","13":"","14":"edit\ndelete"}]
