--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,11 @@ spring.profiles.active = dev
 ## using app password because 2FA is enabled for this gmail, so cann't use the actual password.
 #spring.mail.password=pndj fkdq iqrd lfdt
 #spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.enable=
+
+## Multipart files configuration: by default the max-file-count = 10 but some servers allow only 9 files even if max-file-count = 10.
+spring.servlet.multipart.max-file-count = 20 
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 100MB
+
 
