--- a/src/main/resources/opt/app.data/newprojects.json
+++ b/src/main/resources/opt/app.data/newprojects.json
@@ -1,6 +1,7 @@
 [ {
   "id" : 1,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "The Maxxon, Cheras",
   "price" : 0.0,
   "address" : "Persiaran Damai Perdana, Bandar Damai Perdana, 43200 Cheras, Selangor",
@@ -15,13 +16,15 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d12428.70105649954!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc35000a92fef9%3A0x8c2d6f981f466147!2sPersiaran%20Damai%20Perdana%2C%20Bandar%20Damai%20Perdana%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0413527!2d101.7358926!5e1!3m2!1sen!2smy!4v1765058103603!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
 }, {
   "id" : 2,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "The Maxxon, Cheras",
   "price" : 0.0,
   "address" : "Persiaran Damai Perdana, Bandar Damai Perdana, 43200 Cheras, Selangor",
@@ -36,13 +39,15 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d12428.70105649954!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc35000a92fef9%3A0x8c2d6f981f466147!2sPersiaran%20Damai%20Perdana%2C%20Bandar%20Damai%20Perdana%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0413527!2d101.7358926!5e1!3m2!1sen!2smy!4v1765058103603!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
 }, {
   "id" : 3,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "The Maxxon, Cheras",
   "price" : 0.0,
   "address" : "Persiaran Damai Perdana, Bandar Damai Perdana, 43200 Cheras, Selangor",
@@ -57,13 +62,15 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d12428.70105649954!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc35000a92fef9%3A0x8c2d6f981f466147!2sPersiaran%20Damai%20Perdana%2C%20Bandar%20Damai%20Perdana%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0413527!2d101.7358926!5e1!3m2!1sen!2smy!4v1765058103603!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
 }, {
   "id" : 4,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "Sungai Long Residence, Cheras",
   "price" : 0.0,
   "address" : "Jalan Sungai Long, Bandar Sungai Long, 43000 Kajang, Selangor",
@@ -78,13 +85,15 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18902.770190563926!2d101.74099514999999!3d3.1214416999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc335a2868e5e5%3A0xabc416a3c3486d85!2sJalan%20Sungai%20Long%2C%20Bandar%20Sungai%20Long%2C%2043000%20Kajang%2C%20Selangor!3m2!1d3.0440402!2d101.8037846!5e1!3m2!1sen!2smy!4v1765058731433!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
 }, {
   "id" : 5,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "Sungai Long Residence, Cheras",
   "price" : 0.0,
   "address" : "Jalan Sungai Long, Bandar Sungai Long, 43000 Kajang, Selangor",
@@ -99,13 +108,15 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18902.770190563926!2d101.74099514999999!3d3.1214416999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cc335a2868e5e5%3A0xabc416a3c3486d85!2sJalan%20Sungai%20Long%2C%20Bandar%20Sungai%20Long%2C%2043000%20Kajang%2C%20Selangor!3m2!1d3.0440402!2d101.8037846!5e1!3m2!1sen!2smy!4v1765058731433!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade\t",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
 }, {
   "id" : 6,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "Palm Elite Residence, Cheras",
   "price" : 0.0,
   "address" : "Jalan Palma Utama, 43200 Cheras, Selangor",
@@ -120,13 +131,15 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18902.41512933403!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cdcd000fbce43f%3A0x5d4e3f69bc7f266f!2sJalan%20Palma%20Utama%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0247352999999997!2d101.81218199999999!5e1!3m2!1sen!2smy!4v1765059181172!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
 }, {
   "id" : 7,
-  "agentId":"vyenpropertyadvisor",
+  "agentId" : "vyenpropertyadvisor",
+  "customerId" : null,
   "name" : "Palm Elite Residence, Cheras",
   "price" : 0.0,
   "address" : "Jalan Palma Utama, 43200 Cheras, Selangor",
@@ -141,8 +154,32 @@
   "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security" ],
   "location" : "https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18902.41512933403!2d101.74099514999999!3d3.1411148000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x31cdcd000fbce43f%3A0x5d4e3f69bc7f266f!2sJalan%20Palma%20Utama%2C%2043200%20Cheras%2C%20Selangor!3m2!1d3.0247352999999997!2d101.81218199999999!5e1!3m2!1sen!2smy!4v1765059181172!5m2!1sen!2smy\" width=\"600\" height=\"450\" style=\"border:0;\" allowfullscreen=\"\" loading=\"lazy\" referrerpolicy=\"no-referrer-when-downgrade",
   "videoURL" : "",
-  "createdBy": "vyenpropertyadvisor",
-  "createdAt": "2025-12-13 07:24:55 PM",
-  "updatedBy": "vyenpropertyadvisor",
-  "updatedAt": "2025-12-13 07:24:55 PM"
+  "isActive" : "YES",
+  "createdAt" : "2025-12-13 07:24:55 PM",
+  "updatedAt" : "2025-12-13 07:24:55 PM",
+  "createdBy" : "vyenpropertyadvisor",
+  "updatedBy" : "vyenpropertyadvisor"
+}, {
+  "id" : 8,
+  "agentId" : "rsbusinesstech",
+  "customerId" : null,
+  "name" : "The Maxxon, Cheras",
+  "price" : 0.0,
+  "address" : "Cheras",
+  "bedrooms" : 4,
+  "bathrooms" : 2,
+  "carParks" : 2,
+  "furnishing" : "Partly Furnished",
+  "sizeSqft" : 1450.0,
+  "imageUrls" : [ "https://res.cloudinary.com/divjzb0t3/image/upload/v1767544038/Vyen_Property_Advisor/jqhnxvlwm25wh0bktpcl.jpg" ],
+  "imagePublicIds" : [ "Vyen_Property_Advisor/jqhnxvlwm25wh0bktpcl" ],
+  "amenities" : [ "Private bathroom", "Family room", "Flat screen TV", "Balcony", "Fridge", "Air conditioning", "Kitchen", "Washing machine", "Pets allowed", "Dining table", "Microwave oven", "Sofa", "High-speed WiFi", "24-hour security" ],
+  "commonFacilities" : [ "Gym", "Outdoor swimming pool", "Sauna", "Terrace", "Park", "Water slide", "24-hour security", "Entrance porch / car porch", "Front yard", "Fencing / boundary wal", "Main gate", "Car porch (open or covered)", "Driveway" ],
+  "location" : "",
+  "videoURL" : "",
+  "isActive" : "YES",
+  "createdAt" : "2026-01-05 12:27:18 AM",
+  "updatedAt" : "",
+  "createdBy" : "rsbusinesstech",
+  "updatedBy" : ""
 } ]
